Miscellaneous code cleanup (#562)